# mypage

./: .buildinfo  .gitignore  Pipfile  README.md  _config.yml  _toc.yml  astro.config.mjs  build.sh  genindex.html  index.html  intro.html  intro.md  make.bat  objects.inv  package-lock.json  package.json  pyproject.toml  requirements.txt  search.html  searchindex.js  tailwind.config.cjs
.github/workflows/: deploy.yml
_astro/: _slug_.BxfrTQyx.css  _slug_.kkj53luF.css
_build/.doctrees/: environment.pickle  intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree
_build/html/: .buildinfo  genindex.html  intro.html  notebooks.html  objects.inv  search.html  searchindex.js
_build/jupyter_execute/: markdown-notebooks.ipynb  notebooks.ipynb
_sources/: intro.md
_sources/data_engineering/: data_modeling.md  overview.md
_sources/development/: ddd.md  overview.md
_sources/rust/: Introduction to PyO3 .md  introduction_to_pyo3.md  overview.md
_static/: mystyle.css
data_engineering/: data_mesh.html  data_mesh.md  data_modeling.html  overview.html
development/: ddd.html  ddd.md  overview.html  overview.md
docs/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_sources/: index.rst.txt
docs/blog/: 20221116.html  index.html
docs/books/: index.html
docs/intro/: index.html
docs/makeovermonday/: 2020_W24.html  2020_W25.html  2020_W25.ipynb  (+1 more)
rust/: Introduction_to_pyo3 .html  Introduction_to_pyo3.html  introduction_to_pyo3.html  introduction_to_pyo3.md  overview.html
source/: conf.py  index.rst
(+93 files in other folders)
