[tool.poetry]
name = "mypage"
version = "0.1.0"
description = ""
authors = ["yujikawa <ykyujikawa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
sphinx-rtd-theme = "^0.4.3"
sphinx_press_theme = "^0.5.1"
nbsphinx = "^0.7.0"
commonmark = "^0.9.1"
recommonmark = "^0.6.0"
ipython = "^7.15"
plotly = "^4.8"
plotly_express = "^0.4.1"
nbconvert = "^5.6"
sphinx-gallery = "^0.7.0"
ipykernel = "^5.3"
seaborn = "^0.10.1"
xlrd = "^1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
